add tags and user create endpoint
